--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/head_shot.JPG" alt="" />
+										<img src="images/head_shot.jpg" alt="" />
 									</span>
 								</section>
 
