image class changes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 											<li><a href="project.html" class="button big">View Projects</a></li>
 										</ul>
 									</div>
-									<span class="image object">
-										<img src="images/pit_un.jpg" alt="" />
+									<span class="image">
+										<img src="images/head_shot.jpg" alt="" />
 									</span>
 								</section>
 
