--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image">
-										<img src="images/head_shot.jpg" alt="" />
+										<img src="images/headshot.jpg" alt="" />
 									</span>
 								</section>
 
