--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 											<li><a href="project.html" class="button big">View Projects</a></li>
 										</ul>
 									</div>
-									<span class="image">
-										<img src="images/headshot.jpg" alt="" />
+									<span class="image object">
+										
+										<a href="#" class="image"><img src="images/head_shot.jpg" alt="" /></a>
 									</span>
 								</section>
 
