--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 											<li><a href="project.html" class="button big">View Projects</a></li>
 										</ul>
 									</div>
-									<span class="image object">
+									<span class="image">
 										
-										<a href="#" class="image"><img src="images/head_shot.jpg" alt="" /></a>
+										<img src="images/headshot.jpg" alt="Headshot of Joseph Jaiyeola" />
 									</span>
 								</section>
 
