--- a/elements.html
+++ b/elements.html
@@ -148,7 +148,7 @@
 
 												<!-- Blockquote -->
 													<h3>Favorite Quote</h3>
-													<blockquote>"Data isn't units of information. Data is a story about human behavior - about real people's wants, goals and fears. Never let the numbers, platforms, charts and methodologies cloud your vision. Our real job with data is to better understand these very human stories." Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. <br /> <strong>Daniel Burstein</strong> </blockquote>
+													<blockquote>"Data isn't units of information. Data is a story about human behavior - about real people's wants, goals and fears. Never let the numbers, platforms, charts and methodologies cloud your vision. Our real job with data is to better understand these very human stories."<br /> <strong>Daniel Burstein</strong> </blockquote>
 
 												
 
