--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/cinemas.jpg" alt="" /></a>
 											<h3>Movies</h3>
-											<p>It has be thriller, action, comedy or little horrific. These days it takes time to find an interesting movie. Would watch higly recommended TV shows also.</p>
+											<p>It has got to be a thriller, an action, a comedy or a little horrific. These days it takes time to find an interesting movie. I also watch highly recommended TV shows.</p>
 											<ul class="actions">
 												
 											</ul>
