--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										<header>
 											<h1>Welcome to my<br />
 											CyberSpace</h1>
-											<p>Joseph Jaiyeola, SSM, POPM, (Phd in view) </p>
+											<p>Joseph Jaiyeola, SSM, POPM </p>
 										</header>
 										<p>I am a highly skilled <b>Research Data Scientist</b> with extensive experience in data science, quantitative and qualitative research, geospatial analysis, and UX research. In addition, I have proven track record of leveraging advanced statistical techniques, machine learning algorithms, and innovative methodologies to extract, transform, load (ETL) and analyze actionable insights from complex datasets. A plus to me is that I have also demonstrates exceptional ability to work independently and collaboratively within cross-functional teams, with a strong background in leadership and team management.</p>
 										<ul class="actions">
